# computational-geometry-algorithms

./: Cargo.toml  README.md
src/: app.rs  crossterm.rs  main.rs  ui.rs
src/algorithms/: algorithm.rs  gift_wrap.rs  graham_scan.rs  mod.rs
src/ui/: draw.rs  footer.rs  header.rs  mod.rs
