[package]
name = "computational-geometry-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
argh = "0.1.9"
rand = "0.8.5"
nalgebra = "0.31.4"
itertools = "0.10.5"
anyhow = "1.0.68"
